--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Poor+Story&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Jua&display=swap");
 
+@import "variables.css";
+@import "top.css";
+@import "players.css";
+@import "plastic.css";
+
 /* setting */
 a {
   color: white;
@@ -13,172 +18,6 @@ body {
   margin: 20px;
 }
 
-/* top */
-.top {
-  position: sticky;
-  position: -webkit-sticky;
-  top: 0;
-  margin-bottom: 50px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  background-color: midnightblue;
-  z-index: 10;
-}
-
-.top h1 {
-  font-family: "Jua", sans-serif;
-  font-size: 40px;
-}
-
-.top span {
-  font-size: 20px;
-  margin-bottom: 5px;
-}
-
-.top h3 {
-  font-size: 25px;
-}
-
-.banner button {
-  margin: 15px 5px;
-}
-
-/* player */
-.player {
-  display: flex;
-  align-items: center;
-  margin: 15px 5px;
-}
-
-.player:hover {
-  color: white;
-}
-
-@keyframes statusBarAnimation {
-  from {
-    width: 120px;
-  }
-  to {
-    height: 100%;
-  }
-}
-
-@keyframes imgAnimation {
-  from {
-    opacity: 0%;
-  }
-  to {
-    opacity: 100%;
-    visibility: visible;
-  }
-}
-
-.status-bar {
-  display: flex;
-  align-items: center;
-  animation: statusBarAnimation 2s ease-in-out;
-}
-
-body img {
-  visibility: hidden;
-  animation: imgAnimation 1s ease-in-out 2s forwards;
-}
-
-#심혜준 {
-  width: 620px;
-  height: 30px;
-  background-color: lightpink;
-}
-
-#손하연 {
-  width: 370px;
-  height: 30px;
-  background-color: darkturquoise;
-}
-
-#홍수민 {
-  width: 470px;
-  height: 30px;
-  background-color: lightgreen;
-}
-
-#허나원 {
-  width: 270px;
-  height: 30px;
-  background-color: orchid;
-}
-
-#문호정 {
-  width: 670px;
-  height: 30px;
-  background-color: lightskyblue;
-}
-
-.status-bar span {
-  font-size: 20px;
-  padding: 5px;
-}
-
-.avatar-pic {
-  width: 50px;
-  position: relative;
-  left: -14px;
-  top: 2px;
-}
-
-.crown {
-  width: 16px;
-  position: relative;
-  left: -36px;
-  top: -26px;
-  transform: rotateZ(11deg);
-}
-
-/* plastic pop */
-.plastic {
-  width: 45px;
-}
-
-.plastic:active {
+.hidden {
   display: none;
-}
-
-#p1 {
-  width: 50px;
-  position: fixed;
-  z-index: 20;
-  top: 150px;
-  left: 270px;
-}
-
-#p2 {
-  width: 60px;
-  position: fixed;
-  z-index: 20;
-  top: 250px;
-  right: 280px;
-}
-
-#p3 {
-  position: fixed;
-  z-index: 20;
-  top: 280px;
-  left: 220px;
-}
-
-#p4 {
-  position: fixed;
-  z-index: 20;
-  top: 30px;
-  left: 90px;
-}
-
-#p5 {
-  position: fixed;
-  z-index: 20;
-  top: 100px;
-  right: 50px;
-  translate: rotateZ(30deg);
 }
