--- a/variables.css
+++ b/variables.css
@@ -3,4 +3,8 @@
   --default-length: 150px;
   --player-1: 1;
   --player-2: 1;
+  --player-3: 2;
+  --player-4: 2;
+  --player-5: 1;
+  --player-6: 1;
 }
