--- a/variables.css
+++ b/variables.css
@@ -1,17 +1,51 @@
 /*variables*/
 :root {
   --default-length: 170px;
-  --player-1: 1;
+  --length: 100px;
+  --player-1: 3;
   --player-2: 2;
-  --player-3: 3;
+  --player-3: 5;
   --player-4: 4;
   --player-5: 2;
-  --player-6: 1;
+  --player-6: 3;
   --player-7: 1;
-  --player-8: 1;
+  --player-8: 2;
   --player-9: 2;
-  --player-10: 1;
-  --player-11: 3;
+  --player-10: 9;
+  --player-11: 7;
   --player-12: 1;
-  --player-13: 1;
+  --player-13: 3;
+  --player-14: 1;
+  --player-15: 1;
+  --player-16: 2;
+  --player-17: 3;
+  --player-18: 3;
+  --player-19: 2;
+  --player-20: 3;
+  --player-21: 3;
+  --player-22: 1;
+  --player-23: 3;
+  --player-24: 1;
+  --player-25: 1;
+  --player-26: 2;
+  --player-27: 3;
+  --player-28: 1;
+  --player-29: 1;
+  --player-30: 1;
+  --player-31: 1;
+  --player-32: 8;
+  --player-33: 2;
+  --player-34: 2;
+  --player-35: 3;
+  --player-36: 3;
+  --player-37: 2;
+  --player-38: 3;
+  --player-39: 1;
+  --player-40: 2;
+  --player-41: 1;
+  --player-42: 1;
+  --player-43: 1;
+  --player-44: 2;
+  --player-45: 1;
+  --player-46: 1;
 }
